# efi-monitor

./: .coveragerc  .gitignore  README.md  build.sh  setup.cfg
.github/workflows/: python-app.yml
tests/: test_cli.py
