[metadata]
name = efi-monitor
version = 0.0.1

[options]
packages = efi_monitor

[options.extras_require]
TEST = pydocstyle>=6.1.1;
       pytest>=7.0.1;
       pylint>=2.12.2;
       pytest-mockito>=0.0.4;
       pytest-cov>=3.0.0;

[options.entry_points]
console_scripts =
    efi-check = efi_monitor._cli:check
    efi-clear = efi_monitor._cli:clear

[tool:pytest]
addopts = --cov=efi_monitor --cov-fail-under=100 --cov-report html
